// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`All props 1`] = `
<div>
  <li
    class="_list _active"
  >
    test
    <span
      class="_list-group _right"
      title="main:Edit"
    >
      <span
        class="_list-element"
      >
        <img
          alt="main:Edit"
          class="_icon-alone"
          src="/dist/images/icons/interface/edit_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="duplicate"
    >
      <span
        class="_list-element"
      >
        <img
          alt="duplicate"
          class="_icon-alone"
          src="/dist/images/icons/interface/copy_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="main:Delete"
    >
      <span
        class="_list-element"
      >
        <img
          alt="main:Delete"
          class="_icon-alone"
          src="/dist/images/icons/interface/delete_white.svg"
        />
      </span>
    </span>
  </li>
  <li
    class="_clear"
  />
</div>
`;

exports[`Flush action buttons 1`] = `
<div>
  <li
    class="_list _active"
  >
    test
    <span
      class="_list-group _flush-right _right"
      title="main:Edit"
    >
      <span
        class="_list-element"
      >
        <img
          alt="main:Edit"
          class="_icon-alone"
          src="/dist/images/icons/interface/edit_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="duplicate"
    >
      <span
        class="_list-element"
      >
        <img
          alt="duplicate"
          class="_icon-alone"
          src="/dist/images/icons/interface/copy_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="main:Delete"
    >
      <span
        class="_list-element"
      >
        <img
          alt="main:Delete"
          class="_icon-alone"
          src="/dist/images/icons/interface/delete_white.svg"
        />
      </span>
    </span>
  </li>
  <li
    class="_clear"
  />
</div>
`;

exports[`Flush action buttons, just delete 1`] = `
<div>
  <li
    class="_list _active"
  >
    test
    <span
      class="_list-group _flush-right _right"
      title="main:Delete"
    >
      <span
        class="_list-element"
      >
        <img
          alt="main:Delete"
          class="_icon-alone"
          src="/dist/images/icons/interface/delete_white.svg"
        />
      </span>
    </span>
  </li>
  <li
    class="_clear"
  />
</div>
`;

exports[`Minimal props 1`] = `
<div>
  <li
    class="_list _active"
  >
    test
  </li>
  <li
    class="_clear"
  />
</div>
`;

exports[`Not selected, with altText 1`] = `
<div>
  <li
    class="_list"
  >
    test
    <span
      class="_list-group _right"
      title="select"
    >
      <span
        class="_list-element"
      >
        <img
          alt="select"
          class="_icon-alone"
          src="/dist/images/icons/interface/edit_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="duplicate"
    >
      <span
        class="_list-element"
      >
        <img
          alt="duplicate"
          class="_icon-alone"
          src="/dist/images/icons/interface/copy_white.svg"
        />
      </span>
    </span>
    <span
      class="_list-group _right"
      title="delete"
    >
      <span
        class="_list-element"
      >
        <img
          alt="delete"
          class="_icon-alone"
          src="/dist/images/icons/interface/delete_white.svg"
        />
      </span>
    </span>
  </li>
  <li
    class="_clear"
  />
</div>
`;
